--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "darryldecode/cart": "^4.2",
         "doctrine/dbal": "^2.12",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "inertiajs/inertia-laravel": "^0.2.12",
+        "laravel/fortify": "^1.7",
         "laravel/framework": "^8.0",
         "laravel/jetstream": "^1.5",
         "laravel/sanctum": "^2.6",
