--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "darryldecode/cart": "^4.2",
         "doctrine/dbal": "^2.12",
         "fideloper/proxy": "^4.2",
